# mpc.pytorch

./: .gitignore  pyproject.toml
benchmarks/: benchmark_isolate.py  benchmark_memory.py  benchmark_objgraph.py  benchmark_tensor_track.py
mpc/: lqr_step.py  util.py
tests/: test_dynamics.py  test_mpc.py
